@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 03-06-2006 changed: Cleaned up the playlist player state code.
+ - 03-06-2006 changed: Allowed PlayerControl(RepeatAll), PlayerControl(RepeatOne) and PlayerControl(RepeatNone) to be used instead of just the toggle version.
  - 03-06-2006 changed: Playlists now act like folders in all views.  Revert to the old behaviour using <playlistasfolders> in advancedsettings.xml
  - 03-06-2006 fixed: No alternate label was available for the togglebutton.  Use <altlabel>.
  - 03-06-2006 changed: Moved ReadString() to CFile (removes duplicate code).
